Flickering caused by flex slider plugin; setting css property z-index: 1, partially solves it; https://github.com/woothemes/FlexSlider/issues/749

--- a/purplebit_site/main_site/static/main_site/css/designr-theme-purple.css
+++ b/purplebit_site/main_site/static/main_site/css/designr-theme-purple.css
@@ -33,6 +33,8 @@
     border-radius:0;
 }
 
+
+
 /*---------------------------
 ---Main Typography Styles----
 -----------------------------*/
@@ -320,6 +322,10 @@ body {
 	margin-left:-15px;
 }
 
+/* text flickering fix */
+.flexslider {
+    z-index: 1;
+}
 /*----------------------
 -----Header Styles------
 ------------------------*/
